src/app/section-title/section-title.component.scss
h1 {
    @apply 
        text-lg 
        font-bold
        bg-orange 
        text-gray-100 
        text-center
        tracking-wider 
        uppercase
        shadow-lg
        overflow-hidden

        w-full
        sm:w-96
        px-8
        py-4 
        -mt-24

        transform 
        -skew-y-2 
        sm:skew-y-0
        sm:-rotate-3 
        sm:rounded-md
    ;
}

